fix z-index

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -11,8 +11,6 @@
   height: 40px;
   padding-block: 1.5%;
   background-color: white;
-    position: sticky;
-  z-index: 10;
 }
 .navLogo {
   display: flex;
